--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,4 +124,23 @@ nav {
     .nav-toggle-label {
         display: none;
     }
+
+    #logo {
+        font-size: 200%;
+        line-height: 75px;
+        margin: 0 0.5rem;
+    }
+
+    main {
+        /* push content further down due to bigger header */
+        margin-top: 79px;
+    }
+}
+
+/* Removing link decoration on menu item mouse hover */
+
+@media screen and (min-width: 992px) {
+    #menu a:hover {
+        border-bottom: 1px solid #3a3a3a;
+    }
 }
