--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,10 +45,16 @@ h1 {
 
 /* main content */
 main {
-    background-color: lightblue;
     margin-top: 47px;
     /* flexbox styling to push footer to bottom */
     flex: 1 0 auto;
+}
+
+/* Hero section */
+#hero {
+    height: 600px;
+    width: 100%;
+    background: url(../images/hero-image.webp) no-repeat center center/cover;
 }
 
 /* footer */
