Added cover text over hero image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
     box-sizing: border-box;
 }
 
-/* Body styling */
+/* General styles */
 body {
     min-height: 100vh;
     display: flex;
@@ -16,6 +16,13 @@ body {
     /* generic project styles */
     color: #3a3a3a;
     font-family: 'Lato', sans-serif;
+}
+
+h1, h2, h3 {
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #252525;
 }
 
 /* header */
@@ -36,13 +43,6 @@ header a {
     color: inherit;
 }
 
-h1 {
-    font-family: 'Oswald', sans-serif;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    color: #252525;
-}
-
 /* main content */
 main {
     margin-top: 47px;
@@ -55,6 +55,22 @@ main {
     height: 600px;
     width: 100%;
     background: url(../images/hero-image.webp) no-repeat center center/cover;
+    position: relative;
+}
+
+#cover-text {
+    background-color: rgba(241,109,107, 0.7);
+    font-size: 130%;
+    position: absolute;
+    bottom: 30px;
+    width: 80%;
+    min-height: 40px;
+    padding-top: 40px;
+    padding-left: 10px;
+}
+
+#cover-text > h2, #cover-text > h3 {
+    color: #ffffff;
 }
 
 /* footer */
@@ -150,6 +166,11 @@ nav {
     main {
         /* push content further down due to bigger header */
         margin-top: 79px;
+    }
+
+    #cover-text {
+        width: 300px;
+        right: 50px;
     }
 }
 
