added circular image to reasons section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,8 +106,20 @@ main {
 }
 
 /* Circle image in reasons */
-#cirle-cover-bg {
-    background-image: url(../images/reasons-image.webp);
+#circle-cover-bg {
+    width: 90vw;
+    height: 90vw;
+    margin-bottom: 20px;
+    background: url(../images/reasons-image.webp) no-repeat top center / cover;
+    border-radius: 50%;
+    max-width: 300px;
+    max-height: 300px;
+}
+
+#benefits-image{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 /* footer */
