--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,6 +122,32 @@ main {
     justify-content: center;
 }
 
+/* meet up info section */
+#times {
+    background: url(../images/dublin-city.webp) no-repeat center center / cover;
+    width: 100%;
+
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#times div {
+    color: #fafafa;
+    background-color: rgba(0, 0, 0, .6);
+    padding: 15px;
+    text-align: center;
+    /* No wrap under 400px wide screens, each div expands to fill its row */
+    flex-basis: 200px;
+    flex-grow: 1;
+    /* Create a grid over background image */
+    border: 2px solid white;
+
+}
+
+#times h3 {
+    color: #fafafa;
+}
+
 /* footer */
 #social-networks {
     text-align: center;
