--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,10 @@ h1, h2, h3 {
     color: #252525;
 }
 
+.hidden-heading {
+    display: none;
+}
+
 /* header */
 header {
     background-color: #ffffff;
@@ -141,7 +145,6 @@ main {
     flex-grow: 1;
     /* Create a grid over background image */
     border: 2px solid white;
-
 }
 
 #times h3 {
