added increase in gallery columns for different screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,6 +151,16 @@ main {
     color: #fafafa;
 }
 
+/* GALLERY PAGE */
+#photos img {
+    width: 100%;
+    line-height: 1em;
+}
+
+#photos {
+    line-height: 0;
+}
+
 /* footer */
 #social-networks {
     text-align: center;
@@ -205,6 +215,15 @@ nav {
 
 .nav-toggle-label {
     font-size: 2rem;
+}
+
+/* Media quiery: landscape phones */
+
+@media screen and (min-width: 576px) {
+    #photos {
+        column-count: 2;
+        column-gap: 0;
+    }
 }
 
 /* Media query: tablets and larger (768px and up) */
@@ -262,6 +281,12 @@ nav {
         text-align: end;
         align-self: flex-end;
     }
+
+    /* for gallery */
+
+    #photos {
+        column-count: 3;
+    }
 }
 
 /* Removing link decoration on menu item mouse hover */
@@ -269,6 +294,11 @@ nav {
 @media screen and (min-width: 992px) {
     #menu a:hover {
         border-bottom: 1px solid #3a3a3a;
+    }
+
+    /* for gallery */
+    #photos {
+        column-count: 4;
     }
 }
 
