--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,6 +106,7 @@ main {
     min-height: 40px;
     padding-top: 40px;
     padding-left: 10px;
+    padding-bottom: 50px;
 }
 
 #cover-text > h2, #cover-text > h3 {
